@@ -1,6 +1,6 @@
 // options.h -- handle command line options for gold  -*- C++ -*-
 
-// Copyright 2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
+// Copyright 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 // Written by Ian Lance Taylor <iant@google.com>.
 
 // This file is part of gold.
@@ -57,17 +57,11 @@ class Input_file_lib;
 class Position_dependent_options;
 class Target;
 class Plugin_manager;
-class Script_info;
 
 // Incremental build action for a specific file, as selected by the user.
 
 enum Incremental_disposition
 {
-  // Startup files that appear before the first disposition option.
-  // These will default to INCREMENTAL_CHECK unless the
-  // --incremental-startup-unchanged option is given.
-  // (For files added implicitly by gcc before any user options.)
-  INCREMENTAL_STARTUP,
   // Determine the status from the timestamp (default).
   INCREMENTAL_CHECK,
   // Assume the file changed from the previous build.
@@ -101,9 +95,6 @@ parse_uint64(const char* option_name, const char* arg, uint64_t* retval);
 
 extern void
 parse_double(const char* option_name, const char* arg, double* retval);
-
-extern void
-parse_percent(const char* option_name, const char* arg, double* retval);
 
 extern void
 parse_string(const char* option_name, const char* arg, const char** retval);
@@ -380,12 +371,6 @@ struct Struct_special : public Struct_var
 	     #default_value__, helpstring__, helparg__, false,		 \
 	     double, double, options::parse_double)
 
-#define DEFINE_percent(varname__, dashes__, shortname__, default_value__, \
-		       helpstring__, helparg__)				  \
-  DEFINE_var(varname__, dashes__, shortname__, default_value__ / 100.0,	  \
-	     #default_value__, helpstring__, helparg__, false,		  \
-	     double, double, options::parse_percent)
-
 #define DEFINE_string(varname__, dashes__, shortname__, default_value__, \
                       helpstring__, helparg__)                           \
   DEFINE_var(varname__, dashes__, shortname__, default_value__,          \
@@ -543,7 +528,7 @@ class Search_directory
   { }
 
   // This is the usual constructor.
-  Search_directory(const std::string& name, bool put_in_sysroot)
+  Search_directory(const char* name, bool put_in_sysroot)
     : name_(name), put_in_sysroot_(put_in_sysroot), is_in_sysroot_(false)
   {
     if (this->name_.empty())
@@ -643,9 +628,6 @@ class General_options
   DEFINE_bool_alias(dn, Bdynamic, options::ONE_DASH, '\0',
 		    N_("alias for -Bstatic"), NULL, true);
 
-  DEFINE_bool(Bgroup, options::ONE_DASH, '\0', false,
-	      N_("Use group name lookup rules for shared library"), NULL);
-
   DEFINE_bool(Bsymbolic, options::ONE_DASH, '\0', false,
               N_("Bind defined symbols locally"), NULL);
 
@@ -680,10 +662,6 @@ class General_options
 	      N_("Output cross reference table"),
 	      N_("Do not output cross reference table"));
 
-  DEFINE_bool(ctors_in_init_array, options::TWO_DASHES, '\0', true,
-	      N_("Use DT_INIT_ARRAY for all constructors (default)"),
-	      N_("Handle constructors as directed by compiler"));
-
   DEFINE_bool(define_common, options::TWO_DASHES, 'd', false,
               N_("Define common symbols"),
               N_("Do not define common symbols"));
@@ -708,8 +686,8 @@ class General_options
 	      NULL);
 
   DEFINE_bool(detect_odr_violations, options::TWO_DASHES, '\0', false,
-              N_("Look for violations of the C++ One Definition Rule"),
-	      N_("Do not look for violations of the C++ One Definition Rule"));
+              N_("Try to detect violations of the One Definition Rule"),
+              NULL);
 
   DEFINE_bool(discard_all, options::TWO_DASHES, 'x', false,
 	      N_("Delete all local symbols"), NULL);
@@ -739,29 +717,18 @@ class General_options
               N_("Export all dynamic symbols"),
 	      N_("Do not export all dynamic symbols (default)"));
 
-  DEFINE_set(export_dynamic_symbol, options::TWO_DASHES, '\0',
-	     N_("Export SYMBOL to dynamic symbol table"), N_("SYMBOL"));
-
   DEFINE_special(EB, options::ONE_DASH, '\0',
 		 N_("Link big-endian objects."), NULL);
-
-  DEFINE_special(EL, options::ONE_DASH, '\0',
-		 N_("Link little-endian objects."), NULL);
 
   DEFINE_bool(eh_frame_hdr, options::TWO_DASHES, '\0', false,
               N_("Create exception frame header"), NULL);
 
+  DEFINE_special(EL, options::ONE_DASH, '\0',
+		 N_("Link little-endian objects."), NULL);
+
   DEFINE_bool(enum_size_warning, options::TWO_DASHES, '\0', true, NULL,
 	      N_("(ARM only) Do not warn about objects with incompatible "
 		 "enum sizes"));
-
-  DEFINE_set(auxiliary, options::TWO_DASHES, 'f',
-	     N_("Auxiliary filter for shared object symbol table"),
-	     N_("SHLIB"));
-
-  DEFINE_string(filter, options::TWO_DASHES, 'F', NULL,
-		N_("Filter for shared object symbol table"),
-		N_("SHLIB"));
 
   DEFINE_bool(fatal_warnings, options::TWO_DASHES, '\0', false,
 	      N_("Treat warnings as errors"),
@@ -773,10 +740,6 @@ class General_options
   DEFINE_bool(fix_cortex_a8, options::TWO_DASHES, '\0', false,
 	      N_("(ARM only) Fix binaries for Cortex-A8 erratum."),
 	      N_("(ARM only) Do not fix binaries for Cortex-A8 erratum."));
-
-  DEFINE_bool(fix_arm1176, options::TWO_DASHES, '\0', true,
-	      N_("(ARM only) Fix binaries for ARM1176 erratum."),
-	      N_("(ARM only) Do not fix binaries for ARM1176 erratum."));
 
   DEFINE_bool(merge_exidx_entries, options::TWO_DASHES, '\0', true,
 	      N_("(ARM only) Merge exidx entries in debuginfo."),
@@ -794,16 +757,11 @@ class General_options
   DEFINE_bool(g, options::EXACTLY_ONE_DASH, '\0', false,
 	      N_("Ignored"), NULL);
 
-  DEFINE_bool(gdb_index, options::TWO_DASHES, '\0', false,
-	      N_("Generate .gdb_index section"),
-	      N_("Do not generate .gdb_index section"));
-
-  DEFINE_bool(gnu_unique, options::TWO_DASHES, '\0', true,
-	      N_("Enable STB_GNU_UNIQUE symbol binding (default)"),
-	      N_("Disable STB_GNU_UNIQUE symbol binding"));
-
   DEFINE_string(soname, options::ONE_DASH, 'h', NULL,
                 N_("Set shared library name"), N_("FILENAME"));
+
+  DEFINE_bool(i, options::EXACTLY_ONE_DASH, '\0', false,
+	      N_("Ignored"), NULL);
 
   DEFINE_double(hash_bucket_empty_fraction, options::TWO_DASHES, '\0', 0.0,
 		N_("Min fraction of empty buckets in dynamic hash"),
@@ -831,11 +789,6 @@ class General_options
   DEFINE_special(incremental_update, options::TWO_DASHES, '\0',
 		 N_("Do an incremental link; exit if not possible"), NULL);
 
-  DEFINE_string(incremental_base, options::TWO_DASHES, '\0', NULL,
-                N_("Set base file for incremental linking"
-                   " (default is output file)"),
-                N_("FILE"));
-
   DEFINE_special(incremental_changed, options::TWO_DASHES, '\0',
                  N_("Assume files changed"), NULL);
 
@@ -844,14 +797,6 @@ class General_options
 
   DEFINE_special(incremental_unknown, options::TWO_DASHES, '\0',
                  N_("Use timestamps to check files (default)"), NULL);
-
-  DEFINE_special(incremental_startup_unchanged, options::TWO_DASHES, '\0',
-                 N_("Assume startup files unchanged "
-		    "(files preceding this option)"), NULL);
-
-  DEFINE_percent(incremental_patch, options::TWO_DASHES, '\0', 10,
-		 N_("Amount of extra space to allocate for patches"),
-		 N_("PERCENT"));
 
   DEFINE_string(init, options::ONE_DASH, '\0', "_init",
                 N_("Call SYMBOL at load-time"), N_("SYMBOL"));
@@ -868,20 +813,11 @@ class General_options
               N_("Keep files mapped across passes (default)"),
               N_("Release mapped files after each pass"));
 
-  DEFINE_bool(ld_generated_unwind_info, options::TWO_DASHES, '\0', true,
-	      N_("Generate unwind information for PLT (default)"),
-	      N_("Do not generate unwind information for PLT"));
-
   DEFINE_special(library, options::TWO_DASHES, 'l',
                  N_("Search for library LIBNAME"), N_("LIBNAME"));
 
   DEFINE_dirlist(library_path, options::TWO_DASHES, 'L',
                  N_("Add directory to search path"), N_("DIR"));
-
-  DEFINE_bool(text_reorder, options::TWO_DASHES, '\0', true,
-	      N_("Enable text section reordering for GCC section names "
-		 "(default)"),
-	      N_("Disable text section reordering for GCC section names"));
 
   DEFINE_bool(nostdlib, options::ONE_DASH, '\0', false,
               N_(" Only search directories specified on the command line."),
@@ -892,11 +828,7 @@ class General_options
               NULL);
 
   DEFINE_string(m, options::EXACTLY_ONE_DASH, 'm', "",
-                N_("Set GNU linker emulation; obsolete"), N_("EMULATION"));
-
-  DEFINE_bool(mmap_output_file, options::TWO_DASHES, '\0', true,
-              N_("Map the output file for writing (default)."),
-              N_("Do not map the output file for writing."));
+                N_("Ignored for compatibility"), N_("EMULATION"));
 
   DEFINE_bool(print_map, options::TWO_DASHES, 'M', false,
 	      N_("Write map file on standard output"), NULL);
@@ -909,7 +841,7 @@ class General_options
 	      N_("Do not page align data, do not make text readonly"),
 	      N_("Page align data, make text readonly"));
 
-  DEFINE_enable(new_dtags, options::EXACTLY_TWO_DASHES, '\0', true,
+  DEFINE_enable(new_dtags, options::EXACTLY_TWO_DASHES, '\0', false,
 		N_("Enable use of DT_RUNPATH and DT_FLAGS"),
 		N_("Disable use of DT_RUNPATH and DT_FLAGS"));
 
@@ -941,18 +873,6 @@ class General_options
   DEFINE_bool(pipeline_knowledge, options::ONE_DASH, '\0', false,
 	      NULL, N_("(ARM only) Ignore for backward compatibility"));
 
-  DEFINE_var(plt_align, options::TWO_DASHES, '\0', 0, "5",
-	     N_("(PowerPC64 only) Align PLT call stubs to fit cache lines"),
-	     N_("[=P2ALIGN]"), true, int, int, options::parse_uint);
-
-  DEFINE_bool(plt_static_chain, options::TWO_DASHES, '\0', false,
-	      N_("(PowerPC64 only) PLT call stubs should load r11"),
-	      N_("(PowerPC64 only) PLT call stubs should not load r11"));
-
-  DEFINE_bool(plt_thread_safe, options::TWO_DASHES, '\0', false,
-	      N_("(PowerPC64 only) PLT call stubs with load-load barrier"),
-	      N_("(PowerPC64 only) PLT call stubs without barrier"));
-
 #ifdef ENABLE_PLUGINS
   DEFINE_special(plugin, options::TWO_DASHES, '\0',
                  N_("Load a plugin library"), N_("PLUGIN"));
@@ -960,16 +880,8 @@ class General_options
                  N_("Pass an option to the plugin"), N_("OPTION"));
 #endif
 
-  DEFINE_bool(posix_fallocate, options::TWO_DASHES, '\0', true,
-              N_("Use posix_fallocate to reserve space in the output file"
-		 " (default)."),
-              N_("Use fallocate or ftruncate to reserve space."));
-
   DEFINE_bool(preread_archive_symbols, options::TWO_DASHES, '\0', false,
               N_("Preread archive symbols when multi-threaded"), NULL);
-
-  DEFINE_bool(print_output_format, options::TWO_DASHES, '\0', false,
-	      N_("Print default output format"), NULL);
 
   DEFINE_string(print_symbol_counts, options::TWO_DASHES, '\0', NULL,
 		N_("Print symbols defined and used for each input"),
@@ -983,8 +895,6 @@ class General_options
 
   DEFINE_bool(relocatable, options::EXACTLY_ONE_DASH, 'r', false,
               N_("Generate relocatable output"), NULL);
-  DEFINE_bool_alias(i, relocatable, options::EXACTLY_ONE_DASH, '\0',
-		    N_("Synonym for -r"), NULL, false);
 
   DEFINE_bool(relax, options::TWO_DASHES, '\0', false,
 	      N_("Relax branches on certain targets"), NULL);
@@ -1028,15 +938,14 @@ class General_options
               N_("Emit only debug line number information"), NULL);
   DEFINE_bool(strip_debug_gdb, options::TWO_DASHES, '\0', false,
               N_("Strip debug symbols that are unused by gdb "
-                 "(at least versions <= 7.4)"), NULL);
+                 "(at least versions <= 6.7)"), NULL);
   DEFINE_bool(strip_lto_sections, options::TWO_DASHES, '\0', true,
               N_("Strip LTO intermediate code sections"), NULL);
 
   DEFINE_int(stub_group_size, options::TWO_DASHES , '\0', 1,
-             N_("(ARM, PowerPC only) The maximum distance from instructions "
-		"in a group of sections to their stubs.  Negative values mean "
-		"stubs are always after (PowerPC before) the group.  1 means "
-		"use default size.\n"),
+             N_("(ARM only) The maximum distance from instructions in a group "
+		"of sections to their stubs.  Negative values mean stubs "
+		"are always after the group. 1 means using default size.\n"),
 	     N_("SIZE"));
 
   DEFINE_bool(no_keep_memory, options::TWO_DASHES, '\0', false,
@@ -1114,23 +1023,8 @@ class General_options
   DEFINE_uint64(Ttext, options::ONE_DASH, '\0', -1U,
                 N_("Set the address of the text segment"), N_("ADDRESS"));
 
-  DEFINE_bool(toc_optimize, options::TWO_DASHES, '\0', true,
-	      N_("(PowerPC64 only) Optimize TOC code sequences"),
-	      N_("(PowerPC64 only) Don't optimize TOC code sequences"));
-
-  DEFINE_bool(toc_sort, options::TWO_DASHES, '\0', true,
-	      N_("(PowerPC64 only) Sort TOC and GOT sections"),
-	      N_("(PowerPC64 only) Don't sort TOC and GOT sections"));
-
   DEFINE_set(undefined, options::TWO_DASHES, 'u',
 	     N_("Create undefined reference to SYMBOL"), N_("SYMBOL"));
-
-  DEFINE_enum(unresolved_symbols, options::TWO_DASHES, '\0', NULL,
-	      N_("How to handle unresolved symbols"),
-	      ("ignore-all,report-all,ignore-in-object-files,"
-	       "ignore-in-shared-libs"),
-	      {"ignore-all", "report-all", "ignore-in-object-files",
-		  "ignore-in-shared-libs"});
 
   DEFINE_bool(verbose, options::TWO_DASHES, '\0', false,
               N_("Synonym for --debug=files"), NULL);
@@ -1144,10 +1038,6 @@ class General_options
 
   DEFINE_bool(warn_constructors, options::TWO_DASHES, '\0', false,
 	      N_("Ignored"), N_("Ignored"));
-
-  DEFINE_bool(warn_execstack, options::TWO_DASHES, '\0', false,
-	      N_("Warn if the stack is executable"),
-	      N_("Do not warn if the stack is executable (default)"));
 
   DEFINE_bool(warn_mismatch, options::TWO_DASHES, '\0', true,
 	      NULL, N_("Don't warn about mismatched input files"));
@@ -1203,10 +1093,6 @@ class General_options
                  N_("Start a library"), NULL);
   DEFINE_special(end_lib, options::TWO_DASHES, '\0',
                  N_("End a library "), NULL);
-
-  DEFINE_string(fuse_ld, options::ONE_DASH, '\0', "",
-		N_("Ignored for GCC linker option compatibility"),
-		"");
 
   // The -z options.
 
@@ -1267,7 +1153,7 @@ class General_options
 	      N_("Don't mark variables read-only after relocation"));
   DEFINE_bool(text, options::DASH_Z, '\0', false,
 	      N_("Do not permit relocations in read-only segments"),
-	      N_("Permit relocations in read-only segments (default)"));
+	      NULL);
   DEFINE_bool_alias(textoff, text, options::DASH_Z, '\0',
 		    N_("Permit relocations in read-only segments (default)"),
 		    NULL, true);
@@ -1418,12 +1304,6 @@ class General_options
   incremental_disposition() const
   { return this->incremental_disposition_; }
 
-  // The disposition to use for startup files (those that precede the
-  // first --incremental-changed, etc. option).
-  Incremental_disposition
-  incremental_startup_disposition() const
-  { return this->incremental_startup_disposition_; }
-
   // Return true if S is the name of a library excluded from automatic
   // symbol export.
   bool
@@ -1434,11 +1314,6 @@ class General_options
   // address.  Otherwise return false.
   bool
   section_start(const char* secname, uint64_t* paddr) const;
-
-  // Return whether any --section-start option was used.
-  bool
-  any_section_start() const
-  { return !this->section_starts_.empty(); }
 
   enum Fix_v4bx
   {
@@ -1509,7 +1384,7 @@ class General_options
 
   // These are called by finalize() to set up the search-path correctly.
   void
-  add_to_library_path_with_sysroot(const std::string& arg)
+  add_to_library_path_with_sysroot(const char* arg)
   { this->add_search_directory_to_library_path(Search_directory(arg, true)); }
 
   // Apply any sysroot to the directory lists.
@@ -1546,12 +1421,9 @@ class General_options
   // --incremental-unchanged or --incremental-unknown option.  The
   // value may change as we proceed parsing the command line flags.
   Incremental_disposition incremental_disposition_;
-  // The disposition to use for startup files (those marked
-  // INCREMENTAL_STARTUP).
-  Incremental_disposition incremental_startup_disposition_;
   // Whether we have seen one of the options that require incremental
-  // build (--incremental-changed, --incremental-unchanged,
-  // --incremental-unknown, or --incremental-startup-unchanged).
+  // build (--incremental-changed, --incremental-unchanged or
+  // --incremental-unknown)
   bool implicit_incremental_;
   // Libraries excluded from automatic export, via --exclude-libs.
   Unordered_set<std::string> excluded_libs_;
@@ -1643,7 +1515,7 @@ class Input_file_argument
   //         command line, such as --whole-archive.
   Input_file_argument()
     : name_(), type_(INPUT_FILE_TYPE_FILE), extra_search_path_(""),
-      just_symbols_(false), options_(), arg_serial_(0)
+      just_symbols_(false), options_()
   { }
 
   Input_file_argument(const char* name, Input_file_type type,
@@ -1651,7 +1523,7 @@ class Input_file_argument
                       bool just_symbols,
                       const Position_dependent_options& options)
     : name_(name), type_(type), extra_search_path_(extra_search_path),
-      just_symbols_(just_symbols), options_(options), arg_serial_(0)
+      just_symbols_(just_symbols), options_(options)
   { }
 
   // You can also pass in a General_options instance instead of a
@@ -1663,7 +1535,7 @@ class Input_file_argument
                       bool just_symbols,
                       const General_options& options)
     : name_(name), type_(type), extra_search_path_(extra_search_path),
-      just_symbols_(just_symbols), options_(options), arg_serial_(0)
+      just_symbols_(just_symbols), options_(options)
   { }
 
   const char*
@@ -1705,16 +1577,6 @@ class Input_file_argument
 	    || !this->extra_search_path_.empty());
   }
 
-  // Set the serial number for this argument.
-  void
-  set_arg_serial(unsigned int arg_serial)
-  { this->arg_serial_ = arg_serial; }
-
-  // Get the serial number.
-  unsigned int
-  arg_serial() const
-  { return this->arg_serial_; }
-
  private:
   // We use std::string, not const char*, here for convenience when
   // using script files, so that we do not have to preserve the string
@@ -1724,8 +1586,6 @@ class Input_file_argument
   std::string extra_search_path_;
   bool just_symbols_;
   Position_dependent_options options_;
-  // A unique index for this file argument in the argument list.
-  unsigned int arg_serial_;
 };
 
 // A file or library, or a group, from the command line.
@@ -1735,17 +1595,17 @@ class Input_argument
  public:
   // Create a file or library argument.
   explicit Input_argument(Input_file_argument file)
-    : is_file_(true), file_(file), group_(NULL), lib_(NULL), script_info_(NULL)
+    : is_file_(true), file_(file), group_(NULL), lib_(NULL)
   { }
 
   // Create a group argument.
   explicit Input_argument(Input_file_group* group)
-    : is_file_(false), group_(group), lib_(NULL), script_info_(NULL)
+    : is_file_(false), group_(group), lib_(NULL)
   { }
 
   // Create a lib argument.
   explicit Input_argument(Input_file_lib* lib)
-    : is_file_(false), group_(NULL), lib_(lib), script_info_(NULL)
+    : is_file_(false), group_(NULL), lib_(lib)
   { }
 
   // Return whether this is a file.
@@ -1803,22 +1663,11 @@ class Input_argument
     return this->lib_;
   }
 
-  // If a script generated this argument, store a pointer to the script info.
-  // Currently used only for recording incremental link information.
-  void
-  set_script_info(Script_info* info)
-  { this->script_info_ = info; }
-
-  Script_info*
-  script_info() const
-  { return this->script_info_; }
-
  private:
   bool is_file_;
   Input_file_argument file_;
   Input_file_group* group_;
   Input_file_lib* lib_;
-  Script_info* script_info_;
 };
 
 typedef std::vector<Input_argument> Input_argument_list;
@@ -1836,12 +1685,9 @@ class Input_file_group
   { }
 
   // Add a file to the end of the group.
-  Input_argument&
+  void
   add_file(const Input_file_argument& arg)
-  {
-    this->files_.push_back(Input_argument(arg));
-    return this->files_.back();
-  }
+  { this->files_.push_back(Input_argument(arg)); }
 
   // Iterators to iterate over the group contents.
 
@@ -1870,12 +1716,9 @@ class Input_file_lib
   { }
 
   // Add a file to the end of the lib.
-  Input_argument&
+  void
   add_file(const Input_file_argument& arg)
-  {
-    this->files_.push_back(Input_argument(arg));
-    return this->files_.back();
-  }
+  { this->files_.push_back(Input_argument(arg)); }
 
   const Position_dependent_options&
   options() const
@@ -1908,12 +1751,12 @@ class Input_arguments
   typedef Input_argument_list::const_iterator const_iterator;
 
   Input_arguments()
-    : input_argument_list_(), in_group_(false), in_lib_(false), file_count_(0)
+    : input_argument_list_(), in_group_(false), in_lib_(false)
   { }
 
   // Add a file.
-  Input_argument&
-  add_file(Input_file_argument& arg);
+  void
+  add_file(const Input_file_argument& arg);
 
   // Start a group (the --start-group option).
   void
@@ -1961,18 +1804,10 @@ class Input_arguments
   empty() const
   { return this->input_argument_list_.empty(); }
 
-  // Return the number of input files.  This may be larger than
-  // input_argument_list_.size(), because of files that are part
-  // of groups or libs.
-  int
-  number_of_input_files() const
-  { return this->file_count_; }
-
  private:
   Input_argument_list input_argument_list_;
   bool in_group_;
   bool in_lib_;
-  unsigned int file_count_;
 };
 
 
@@ -2029,7 +1864,7 @@ class Command_line
   // The number of input files.
   int
   number_of_input_files() const
-  { return this->inputs_.number_of_input_files(); }
+  { return this->inputs_.size(); }
 
   // Iterators to iterate over the list of input files.
 
